--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/styles.css" />
     <link
       rel="icon"
       type="image/png"
@@ -19,7 +20,28 @@
 
     <title>Easybank landing page</title>
   </head>
-  <body></body>
+  <body class="main__grid">
+    <section class="section__home">
+      <header class="header">logo + navigation</header>
+      <div class="home grid grid-col--2">
+        <div class="home__description">
+          <h1 class="heading-primary">Next generation digital banking</h1>
+          <p class="home__description-text">
+            Take your financial life online. Your Easybank account will be a
+            one-stop-shop for spending, saving, budgeting, investing, and much
+            more.
+          </p>
+          <a href="#" class="btn__link btn--full"> Request Invite</a>
+        </div>
+        <div class="home__photo">
+          <img src="images/image-mockups.png" alt="photo 1" class="home__img" />
+        </div>
+      </div>
+    </section>
+    <section class="section__why">section why</section>
+    <section class="section__articles">section articles</section>
+    <footer class="footer">footer</footer>
+  </body>
 </html>
 
 <!-- Home
