--- a/index.html
+++ b/index.html
@@ -21,8 +21,28 @@
     <title>Easybank landing page</title>
   </head>
   <body class="main__grid">
+    <div class="header__box">
+      <header class="header">
+        <a href="#" class="header__logo">
+          <img
+            src="images/logo.svg"
+            alt="easy banking logo"
+            class="header__img"
+          />
+        </a>
+        <nav class="main__nav">
+          <ul class="main__nav-list">
+            <li><a href="#" class="main__nav-link"> Home</a></li>
+            <li><a href="#" class="main__nav-link"> About</a></li>
+            <li><a href="#" class="main__nav-link"> Contact</a></li>
+            <li><a href="#" class="main__nav-link"> Blog</a></li>
+            <li><a href="#" class="main__nav-link"> Careers</a></li>
+          </ul>
+        </nav>
+        <a href="#" class="btn__link btn--full">Request invite</a>
+      </header>
+    </div>
     <section class="section__home">
-      <header class="header">logo + navigation</header>
       <div class="home grid grid-col--2">
         <div class="home__description">
           <h1 class="heading-primary">Next generation digital banking</h1>
@@ -38,7 +58,70 @@
         </div>
       </div>
     </section>
-    <section class="section__why">section why</section>
+    <section class="section__why">
+      <div class="container">
+        <h1 class="heading-secondary">Why choose Easybank?</h1>
+        <p class="why__description">
+          We leverage Open Banking to turn your bank account into your financial
+          hub. Control your finances like never before.
+        </p>
+      </div>
+      <div class="container">
+        <div class="why grid grid-col--4">
+          <div class="why__item">
+            <img
+              src="images/icon-online.svg"
+              alt="online banking photo"
+              class="why-img"
+            />
+            <h3 class="heading-tertiary">Online Banking</h3>
+            <p class="why-text">
+              Our modern web and mobile applications allow you to keep track of
+              your finances wherever you are in the world
+            </p>
+          </div>
+          <div class="why__item">
+            <img
+              src="images/icon-budgeting.svg"
+              alt="online banking photo"
+              class="why-img"
+            />
+
+            <h3 class="heading-tertiary">Simple Budgeting</h3>
+            <p class="why-text">
+              See exactly where your money goes each month. Receive
+              notifications when you’re close to hitting your limits.
+            </p>
+          </div>
+          <div class="why__item">
+            <img
+              src="images/icon-onboarding.svg"
+              alt="online banking photo"
+              class="why-img"
+            />
+
+            <h3 class="heading-tertiary">Fast Onboarding</h3>
+            <p class="why-text">
+              We don’t do branches. Open your account in minutes online and
+              start taking control of your finances right away.
+            </p>
+          </div>
+          <div class="why__item">
+            <img
+              src="images/icon-api.svg"
+              alt="online banking photo"
+              class="why-img"
+            />
+            <h3 class="heading-tertiary">Open API</h3>
+            <p class="why-text">
+              Manage your savings, investments, pension, and much more from one
+              account. Tracking your money has never been easier.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="section__articles">section articles</section>
     <footer class="footer">footer</footer>
   </body>
@@ -72,17 +155,7 @@
   Our modern web and mobile applications allow you to keep track of your finances 
   wherever you are in the world.
 
-  Simple Budgeting
-  See exactly where your money goes each month. Receive notifications when you’re 
-  close to hitting your limits.
 
-  Fast Onboarding
-  We don’t do branches. Open your account in minutes online and start taking control 
-  of your finances right away.
-
-  Open API
-  Manage your savings, investments, pension, and much more from one account. Tracking 
-  your money has never been easier.
 
   
 
