--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </section>
     <section class="section__why">
       <div class="container">
-        <h1 class="heading-secondary">Why choose Easybank?</h1>
+        <h1 class="heading-secondary u-mb-md">Why choose Easybank?</h1>
         <p class="why__description">
           We leverage Open Banking to turn your bank account into your financial
           hub. Control your finances like never before.
@@ -122,7 +122,90 @@
       </div>
     </section>
 
-    <section class="section__articles">section articles</section>
+    <section class="section__articles">
+      <h2 class="heading-secondary u-mb-md">Latest Articles</h2>
+      <div class="article__box grid grid-col--4">
+        <div class="article">
+          <div class="article__img-box">
+            <img
+              src="images/image-currency.jpg"
+              alt="article about currency"
+              class="article-img"
+            />
+          </div>
+          <div class="article__content">
+            <p class="article-author">By Claire Robinson</p>
+            <h3 class="heading-tertiary">
+              Receive money in any currency with no fees
+            </h3>
+            <p class="article-text">
+              The world is getting smaller and we’re becoming more mobile. So
+              why should you be forced to only receive money in a single …
+            </p>
+          </div>
+        </div>
+        <div class="article">
+          <div class="article__img-box">
+            <img
+              src="images/image-restaurant.jpg"
+              alt="article about currency"
+              class="article-img"
+            />
+          </div>
+          <div class="article__content">
+            <p class="article-author">By Wilson Hutton</p>
+            <h3 class="heading-tertiary">
+              Treat yourself without worrying about money
+            </h3>
+            <p class="article-text">
+              Our simple budgeting feature allows you to separate out your
+              spending and set realistic limits each month. That means you …
+            </p>
+          </div>
+        </div>
+
+        <div class="article">
+          <div class="article__img-box">
+            <img
+              src="images/image-plane.jpg"
+              alt="article about currency"
+              class="article-img"
+            />
+          </div>
+
+          <div class="article__content">
+            <p class="article-author">By Wilson Hutton</p>
+            <h3 class="heading-tertiary">
+              Take your Easybank card wherever you go
+            </h3>
+            <p class="article-text">
+              We want you to enjoy your travels. This is why we don’t charge any
+              fees on purchases while you’re abroad. We’ll even show you …
+            </p>
+          </div>
+        </div>
+        <div class="article">
+          <div class="article__img-box">
+            <img
+              src="images/image-confetti.jpg"
+              alt="article about currency"
+              class="article-img"
+            />
+          </div>
+          <div class="article__content">
+            <p class="article-author">By Claire Robinson</p>
+            <h3 class="heading-tertiary">
+              Receive money in any currency with no fees
+            </h3>
+            <p class="article-text">
+              After a lot of hard work by the whole team, we’re excited to
+              launch our closed beta. It’s easy to request an invite through the
+              site ...
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
     <footer class="footer">footer</footer>
   </body>
 </html>
@@ -166,20 +249,7 @@
   The world is getting smaller and we’re becoming more mobile. So why should you be 
   forced to only receive money in a single …
 
-  By Wilson Hutton
-  Treat yourself without worrying about money
-  Our simple budgeting feature allows you to separate out your spending and set 
-  realistic limits each month. That means you …
 
-  By Wilson Hutton
-  Take your Easybank card wherever you go
-  We want you to enjoy your travels. This is why we don’t charge any fees on purchases 
-  while you’re abroad. We’ll even show you …
-
-  By Claire Robinson
-  Our invite-only Beta accounts are now live!
-  After a lot of hard work by the whole team, we’re excited to launch our closed beta. 
-  It’s easy to request an invite through the site ...
 
   
 
