--- a/index.html
+++ b/index.html
@@ -206,60 +206,79 @@
         </div>
       </div>
     </section>
-    <footer class="footer">footer</footer>
+    <footer class="footer">
+      <div class="container">
+        <div class="content">
+          <div class="content__box">
+            <div class="content__item footer__btn">
+              <img
+                src="images/logo.svg"
+                alt="footer image logo"
+                class="footer__img"
+              />
+              <div class="social__list">
+                <a href="" class="social__link">
+                  <img
+                    src="images/icon-facebook.svg"
+                    alt="facebook image"
+                    class="social__img"
+                  />
+                  <img
+                    src="images/icon-pinterest.svg"
+                    alt="facebook image"
+                    class="social__img"
+                  />
+                  <img
+                    src="images/icon-twitter.svg"
+                    alt="facebook image"
+                    class="social__img"
+                  />
+                  <img
+                    src="images/icon-youtube.svg"
+                    alt="facebook image"
+                    class="social__img"
+                  />
+                  <img
+                    src="images/icon-instagram.svg"
+                    alt="facebook image"
+                    class="social__img"
+                  />
+                </a>
+              </div>
+            </div>
+            <div class="content__item">
+              <ul class="footer--list">
+                <li class="main__nav-item">
+                  <a href="#" class="main__nav-link">About Us</a>
+                </li>
+                <li class="main__nav-item">
+                  <a href="#" class="main__nav-link">Contact</a>
+                </li>
+                <li class="main__nav-item">
+                  <a href="#" class="main__nav-link">Blog</a>
+                </li>
+              </ul>
+            </div>
+            <div class="content__item">
+              <ul class="footer--list">
+                <li class="main__nav-item">
+                  <a href="#" class="main__nav-link">Careers</a>
+                </li>
+                <li class="main__nav-item">
+                  <a href="#" class="main__nav-link">Support</a>
+                </li>
+                <li class="main__nav-item">
+                  <a href="#" class="main__nav-link">Privacy Policy</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="content__item footer__btn">
+            <a href="#" class="btn__link btn--full">Request Invite</a>
+            <p class="footer__text">&copy; Easybank. All Rights Reserved</p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
-
-<!-- Home
-  About
-  Contact
-  Blog
-  Careers
-
-  Request Invite
-
-
-
-  Next generation digital banking
-
-  Take your financial life online. Your Easybank account will be a one-stop-shop 
-  for spending, saving, budgeting, investing, and much more.
-
-  Request Invite
-
-
-
-  Why choose Easybank?
-
-  We leverage Open Banking to turn your bank account into your financial hub. Control 
-  your finances like never before.
-
-  Online Banking
-  Our modern web and mobile applications allow you to keep track of your finances 
-  wherever you are in the world.
-
-
-
-  
-
-  Latest Articles
-
-  By Claire Robinson
-  Receive money in any currency with no fees
-  The world is getting smaller and we’re becoming more mobile. So why should you be 
-  forced to only receive money in a single …
-
-
-
-  
-
-  About Us
-  Contact
-  Blog
-  Careers
-  Support
-  Privacy Policy
-
-  Request Invite
-
-  © Easybank. All Rights Reserved -->
