--- a/index.html
+++ b/index.html
@@ -32,11 +32,21 @@
         </a>
         <nav class="main__nav">
           <ul class="main__nav-list">
-            <li><a href="#" class="main__nav-link"> Home</a></li>
-            <li><a href="#" class="main__nav-link"> About</a></li>
-            <li><a href="#" class="main__nav-link"> Contact</a></li>
-            <li><a href="#" class="main__nav-link"> Blog</a></li>
-            <li><a href="#" class="main__nav-link"> Careers</a></li>
+            <li class="main__nav-item">
+              <a href="#" class="main__nav-link"> Home</a>
+            </li>
+            <li class="main__nav-item">
+              <a href="#" class="main__nav-link"> About</a>
+            </li>
+            <li class="main__nav-item">
+              <a href="#" class="main__nav-link"> Contact</a>
+            </li>
+            <li class="main__nav-item">
+              <a href="#" class="main__nav-link"> Blog</a>
+            </li>
+            <li class="main__nav-item">
+              <a href="#" class="main__nav-link"> Careers</a>
+            </li>
           </ul>
         </nav>
         <a href="#" class="btn__link btn--full">Request invite</a>
@@ -223,21 +233,29 @@
                     alt="facebook image"
                     class="social__img"
                   />
+                </a>
+                <a href="" class="social__link">
                   <img
                     src="images/icon-pinterest.svg"
                     alt="facebook image"
                     class="social__img"
                   />
+                </a>
+                <a href="" class="social__link">
                   <img
                     src="images/icon-twitter.svg"
                     alt="facebook image"
                     class="social__img"
                   />
+                </a>
+                <a href="" class="social__link">
                   <img
                     src="images/icon-youtube.svg"
                     alt="facebook image"
                     class="social__img"
                   />
+                </a>
+                <a href="" class="social__link">
                   <img
                     src="images/icon-instagram.svg"
                     alt="facebook image"
@@ -249,26 +267,28 @@
             <div class="content__item">
               <ul class="footer--list">
                 <li class="main__nav-item">
-                  <a href="#" class="main__nav-link">About Us</a>
+                  <a href="#" class="main__nav-link footer--link">About Us</a>
                 </li>
                 <li class="main__nav-item">
-                  <a href="#" class="main__nav-link">Contact</a>
+                  <a href="#" class="main__nav-link footer--link">Contact</a>
                 </li>
                 <li class="main__nav-item">
-                  <a href="#" class="main__nav-link">Blog</a>
+                  <a href="#" class="main__nav-link footer--link">Blog</a>
                 </li>
               </ul>
             </div>
             <div class="content__item">
               <ul class="footer--list">
                 <li class="main__nav-item">
-                  <a href="#" class="main__nav-link">Careers</a>
+                  <a href="#" class="main__nav-link footer--link">Careers</a>
                 </li>
                 <li class="main__nav-item">
-                  <a href="#" class="main__nav-link">Support</a>
+                  <a href="#" class="main__nav-link footer--link">Support</a>
                 </li>
                 <li class="main__nav-item">
-                  <a href="#" class="main__nav-link">Privacy Policy</a>
+                  <a href="#" class="main__nav-link footer--link"
+                    >Privacy Policy</a
+                  >
                 </li>
               </ul>
             </div>
