--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap"
       rel="stylesheet"
-    />
+    /> -->
     <link rel="stylesheet" href="css/styles.css" />
     <link
       rel="icon"
@@ -19,6 +19,7 @@
     />
 
     <title>Easybank landing page</title>
+    <script defer src="js/scripts.js"></script>
   </head>
   <body class="main__grid">
     <div class="header__box">
@@ -36,23 +37,23 @@
               <a href="#" class="main__nav-link"> Home</a>
             </li>
             <li class="main__nav-item">
-              <a href="#" class="main__nav-link"> About</a>
+              <a href="#section-why" class="main__nav-link"> About</a>
             </li>
             <li class="main__nav-item">
-              <a href="#" class="main__nav-link"> Contact</a>
+              <a href="#footer" class="main__nav-link"> Contact</a>
             </li>
             <li class="main__nav-item">
-              <a href="#" class="main__nav-link"> Blog</a>
+              <a href="#section-article" class="main__nav-link"> Blog</a>
             </li>
             <li class="main__nav-item">
-              <a href="#" class="main__nav-link"> Careers</a>
+              <a href="#footer" class="main__nav-link"> Careers</a>
             </li>
           </ul>
         </nav>
-        <a href="#" class="btn__link btn--full">Request invite</a>
+        <a href="#footer" class="btn__link btn--full">Request invite</a>
       </header>
     </div>
-    <section class="section__home">
+    <section class="section__home" id="section-home">
       <div class="home grid grid-col--2">
         <div class="home__description">
           <h1 class="heading-primary">Next generation digital banking</h1>
@@ -68,7 +69,7 @@
         </div>
       </div>
     </section>
-    <section class="section__why">
+    <section class="section__why hidden" id="section-why">
       <div class="container">
         <h1 class="heading-secondary u-mb-md">Why choose Easybank?</h1>
         <p class="why__description">
@@ -132,7 +133,7 @@
       </div>
     </section>
 
-    <section class="section__articles">
+    <section class="section__articles hidden" id="section-article">
       <h2 class="heading-secondary u-mb-md">Latest Articles</h2>
       <div class="article__box grid grid-col--4">
         <div class="article">
@@ -216,7 +217,7 @@
         </div>
       </div>
     </section>
-    <footer class="footer">
+    <footer class="footer hidden" id="footer">
       <div class="container">
         <div class="content">
           <div class="content__box">
@@ -300,5 +301,6 @@
         </div>
       </div>
     </footer>
+    <!-- <script src="js/scripts.js"></script> -->
   </body>
 </html>
