added mobile nav

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
       href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap"
       rel="stylesheet"
     /> -->
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
     <link rel="stylesheet" href="css/styles.css" />
     <link
       rel="icon"
@@ -51,6 +59,11 @@
           </ul>
         </nav>
         <a href="#footer" class="btn__link btn--full">Request invite</a>
+
+        <button class="btn__mobile-nav">
+          <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
+          <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
+        </button>
       </header>
     </div>
     <section class="section__home" id="section-home">
